--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,26 @@
-html,
-body {
-  width: 100%;
-  height: 100%;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
+li {
+  list-style: none;
+}
 html {
+  width: 100%;
+  height: 100%;
   background: #1bb8bf;
-  background: -moz-radial-gradient(
-    center,
-    ellipse cover,
-    #1bb8bf 0%,
-    #0080c9 100%
-  );
-  background: -webkit-radial-gradient(
-    center,
-    ellipse cover,
-    #1bb8bf 0%,
-    #0080c9 100%
-  );
-  background: radial-gradient(ellipse at center, #1bb8bf 0%, #0080c9 100%);
+  background-image: linear-gradient(135deg, #649cf0 0%, #1d62d1 100%);
 }
 body {
-  background: url(img/salah.com.bg.png) no-repeat top center;
+  width: 100%;
+  min-width: 360px;
+  min-height: 400px;
+  height: 100%;
+  background: url(img/bg.png) no-repeat top center;
   background-size: auto 50%;
-  font-size: 42px;
+  font-size: 32px;
   font-family: Lato;
   display: flex;
   align-items: center;
@@ -33,6 +30,10 @@ body {
 #main {
   /* text-align: center; */
   color: white;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 30vh;
 }
 
 #main h1,
@@ -40,17 +41,29 @@ h2 {
   text-align: center;
 }
 
-#main h1 {
-  font-size: 46px;
-  margin: 50px 0 60px 0;
+.card {
+  /* background-color: rgba(255, 0, 0, 0.3); */
+  flex: 1;
 }
 
-#times {
-  margin-top: 250px;
+.card li {
+  margin-bottom: 5px;
+}
+
+.select {
+  background-color: rgba(115, 168, 71, 0.3);
+  flex: 1;
+  width: 100%;
+}
+
+.select select {
+  width: 100%;
+  padding: 0;
+  margin: 0;
 }
 li {
-  margin: 25px 0;
-  width: 330px;
+  /* margin: 25px 0; */
+  /* width: 330px; */
 }
 
 .name {
