--- a/src/App.css
+++ b/src/App.css
@@ -8,19 +8,18 @@ li {
   list-style: none;
 }
 html {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background: #1bb8bf;
   background-image: linear-gradient(135deg, #649cf0 0%, #1d62d1 100%);
+  min-width: 300px;
+  min-height: 400px;
 }
 body {
-  width: 100%;
-  min-width: 360px;
-  min-height: 400px;
-  height: 100%;
   background: url(img/bg.png) no-repeat top center;
   background-size: auto 50%;
-  font-size: 32px;
+  height: 100%;
+  font-size: 1.1rem;
   font-family: Lato;
   display: flex;
   align-items: center;
@@ -28,7 +27,6 @@ body {
 }
 
 #main {
-  /* text-align: center; */
   color: white;
   display: flex;
   align-items: center;
@@ -36,23 +34,21 @@ body {
   margin-top: 30vh;
 }
 
+#main h1 {
+  text-decoration: underline;
+}
 #main h1,
 h2 {
   text-align: center;
-}
-
-.card {
-  /* background-color: rgba(255, 0, 0, 0.3); */
-  flex: 1;
+  font-size: 1.2rem;
+  padding: 1rem;
 }
 
 .card li {
-  margin-bottom: 5px;
+  margin-bottom: 0.4rem;
 }
 
 .select {
-  background-color: rgba(115, 168, 71, 0.3);
-  flex: 1;
   width: 100%;
 }
 
@@ -61,14 +57,9 @@ h2 {
   padding: 0;
   margin: 0;
 }
-li {
-  /* margin: 25px 0; */
-  /* width: 330px; */
-}
 
 .name {
   text-transform: capitalize;
-  /* clear: both; */
 }
 .time {
   float: right;
