Discovering the next prayer and displaying time left

--- a/src/App.css
+++ b/src/App.css
@@ -65,3 +65,15 @@ h2 {
   float: right;
   color: #d9d9d9;
 }
+
+.difference {
+  float: right;
+  margin-right: 20px;
+  color:red !important;
+}
+
+.next-prayer{
+  font-weight: 700;
+  background-color: white;
+  color:black;
+}
