--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@ li {
 html {
   width: 100vw;
   height: 100vh;
-  background: #1bb8bf;
   background-image: linear-gradient(135deg, #649cf0 0%, #1d62d1 100%);
   min-width: 300px;
   min-height: 400px;
@@ -31,7 +30,8 @@ body {
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin-top: 30vh;
+  margin-top: 15vh;
+  zoom: 170%;
 }
 
 #main h1 {
@@ -45,7 +45,8 @@ h2 {
 }
 
 .card li {
-  margin-bottom: 0.4rem;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
 }
 
 .select {
@@ -54,8 +55,9 @@ h2 {
 
 .select select {
   width: 100%;
-  padding: 0;
-  margin: 0;
+  padding: .4rem;
+  margin-top: 2rem;
+  border-radius: 2px;
 }
 
 .name {
@@ -63,7 +65,6 @@ h2 {
 }
 .time {
   float: right;
-  color: #d9d9d9;
 }
 
 .difference {
@@ -76,4 +77,6 @@ h2 {
   font-weight: 700;
   background-color: white;
   color:black;
+  padding: .5rem .4rem .5rem;
+  border-radius: 2px;
 }
