--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,8 @@ html {
   width: 100vw;
   height: 100vh;
   background-image: linear-gradient(135deg, #649cf0 0%, #1d62d1 100%);
-  min-width: 300px;
-  min-height: 400px;
+  min-width: 320px;
+  min-height: 320px;
 }
 body {
   background: url(img/bg.png) no-repeat top center;
@@ -27,10 +27,12 @@ body {
 
 #main {
   color: white;
+  width: 25vh;
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-direction: column;
-  margin-top: 15vh;
+  margin-top: 20vh;
   zoom: 170%;
 }
 
@@ -45,18 +47,18 @@ h2 {
 }
 
 .card li {
-  margin-bottom: 1rem;
-  margin-top: 1rem;
+  margin: 2rem 0;
 }
 
 .select {
   width: 100%;
+  color:black;
+  /* margin-top: 2vh; */
 }
 
 .select select {
   width: 100%;
-  padding: .4rem;
-  margin-top: 2rem;
+  padding: .8rem;
   border-radius: 2px;
 }
 
