--- a/src/App.css
+++ b/src/App.css
@@ -7,18 +7,13 @@
 li {
   list-style: none;
 }
+
 html {
-  width: 100vw;
-  height: 100vh;
   background-image: linear-gradient(135deg, #649cf0 0%, #1d62d1 100%);
-  min-width: 320px;
-  min-height: 320px;
 }
 body {
-  background: url(img/bg.png) no-repeat top center;
   background-size: auto 50%;
-  height: 100%;
-  font-size: 1.1rem;
+  font-size: calc(.8rem + 1vh);
   font-family: Lato;
   display: flex;
   align-items: center;
@@ -27,33 +22,45 @@ body {
 
 #main {
   color: white;
-  width: 35vh;
+  width: 75vw;
+  height: 100vh;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   flex-direction: column;
-  /* margin-top: 20vh; */
-  zoom: 170%;
 }
 
-#main h1 {
-  text-decoration: underline;
-}
 #main h1,
 h2 {
   text-align: center;
-  font-size: 1.2rem;
   padding: 1rem;
 }
 
+.clock {
+  margin-top: 2vh;
+}
+
+.card {
+}
+
+.card ul {
+  height: 50vh;
+  margin: 1vh 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
 .card li {
-  margin: 2rem 0;
+  margin: 1.2rem 0;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .select {
   width: 100%;
   color: black;
-  /* margin-top: 2vh; */
+  margin-bottom: 2vh;
 }
 
 .select select {
@@ -66,19 +73,53 @@ h2 {
   text-transform: capitalize;
 }
 .time {
-  float: right;
 }
 
 .difference {
-  float: right;
-  margin-right: 20px;
   color: red !important;
 }
 
-.next-prayer {
+li.next-prayer {
   font-weight: 700;
   background-color: white;
   color: black;
   padding: 0.5rem 0.4rem 0.5rem;
   border-radius: 2px;
+}
+
+/* Media Queryes */
+
+@media  (min-width: 500px) and (max-width: 600px) {
+  #main {
+    width: 70vw;
+    font-size: calc(1rem + 1vh);
+  }
+}
+@media  (min-width: 600px) and (max-width: 700px) {
+  #main {
+    width: 65vw;
+    font-size: calc(1.2rem + 1vh);
+  }
+}
+@media  (min-width: 700px) and (max-width: 800px) {
+  #main {
+    width: 60vw;
+    font-size: calc(1.4rem + 1vh);
+  }
+}
+@media  (min-width: 800px) and (max-width: 1200px) {
+  #main {
+    width: 45vw;
+    font-size: calc(1.6rem + 1vh);
+  }
+}
+@media  (min-width: 1200px) {
+  #main {
+    width: 450px;
+    font-size: 2rem;
+  }
+
+  .card ul {
+    height: 50vh;
+  }
 }
