--- a/src/common/spinner.module.css
+++ b/src/common/spinner.module.css
@@ -9,10 +9,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
-.row {
-  flex: 1;
+.wrapper{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .spinner:after {
   content: ' ';
