--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,9 @@ li {
 }
 
 html {
-  background-image: linear-gradient(135deg, #649cf0 0%, #1d62d1 100%);
+  background-image: linear-gradient(135deg, #001e4b 10%, #1f6be6 100%);
 }
+
 body {
   background-size: auto 50%;
   font-size: calc(.8rem + 1vh);
