--- a/src/App.css
+++ b/src/App.css
@@ -1,64 +1,6 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+/* App component */
 
-li {
-  list-style: none;
-}
-
-html {
-  background-image: linear-gradient(135deg, #001e4b 10%, #1f6be6 100%);
-}
-
-body {
-  background-size: auto 50%;
-  font-size: calc(0.8rem + 1vh);
-  font-family: Lato;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-#main {
-  color: white;
-  width: 75vw;
-  height: 100vh;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-}
-
-#main h1,
-h2 {
-  text-align: center;
-  padding: 1rem;
-}
-
-.clock {
-  margin-top: 2vh;
-}
-
-.clock h2 {
-  text-transform: capitalize;
-}
-
-.card ul {
-  height: 50vh;
-  margin: 1vh 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-}
-
-.card li {
-  margin: 1.2rem 0;
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
-
+/* Change City Component  */
 .select {
   width: 100%;
   color: black;
@@ -71,20 +13,16 @@ h2 {
   border-radius: 2px;
 }
 
-.name {
-  text-transform: capitalize;
+/* Change Language Component  */
+ul.changeCity {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  cursor: pointer;
 }
-
-.difference {
-  color: red !important;
-}
-
-li.next-prayer {
-  font-weight: 700;
-  background-color: white;
-  color: black;
-  padding: 0.5rem 0.4rem 0.5rem;
-  border-radius: 2px;
+.activeLang {
+  font-weight: bolder;
+  text-decoration: underline;
 }
 
 /* Media Queryes */
