Fix some css issues

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 #main {
   color: white;
   width: 75vw;
-  height: 100vh;
+  /* height: 100vh; */
   display: flex;
   justify-content: space-between;
   flex-direction: column;
