--- a/src/index.css
+++ b/src/index.css
@@ -8,13 +8,8 @@ li {
   list-style: none;
 }
 
-html {
-  background-image: linear-gradient(135deg, #001e4b 10%, #1f6be6 100%);
-}
-
 body {
-  background-size: auto 50%;
-  font-size: calc(0.8rem + 1vh);
+  font-size: 20px;
   font-family: Lato;
   display: flex;
   align-items: center;
